--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 # Visual Studio cache directory
 .vs/
 
+# VSCode
+.vscode/
+
 # Gradle cache directory
 .gradle/
 
@@ -58,3 +61,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+.DS_Store
+workspace.code-workspace
